@@ -246,6 +246,7 @@ S3method(getInitial, default)
 S3method(getInitial, formula)
 S3method(getInitial, selfStart)
 S3method(hatvalues, lm)
+S3method(hatvalues, smooth.spline)
 S3method(identify, hclust)
 S3method(influence, glm)
 S3method(influence, lm)
