@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2016-05-20 r70654) -- "Unsuffered Consequences"
+R Under development (unstable) (2016-05-26 r70671) -- "Unsuffered Consequences"
 Copyright (C) 2016 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -9666,7 +9666,7 @@ McNemar's chi-squared = 16.818, df = 1, p-value = 4.115e-05
 > flush(stderr()); flush(stdout())
 > 
 > ### Name: medpolish
-> ### Title: Median Polish of a Matrix
+> ### Title: Median Polish (Robust Twoway Decomposition) of a Matrix
 > ### Aliases: medpolish
 > ### Keywords: robust
 > 
@@ -12825,6 +12825,9 @@ $yin
  [9] 50.50000 33.33333 36.00000 40.66667 64.50000 50.00000 50.40000 66.00000
 [17] 54.00000 93.75000 85.00000
 
+$tol
+[1] 7e-06
+
 $data
 $data$x
  [1]  4  4  7  7  8  9 10 10 10 11 11 12 12 12 12 13 13 13 13 14 14 14 14 15 15
@@ -12864,8 +12867,8 @@ $lambda
 [1] 0.0008526606
 
 $iparms
-icrit ispar  iter 
-    3     0    13 
+icrit ispar  iter       
+    3     0    13     0 
 
 $fit
 $knot
@@ -15311,11 +15314,12 @@ GCV: 244.1044
 > ## Don't show: 
 >   stopifnot(cars.spl $ w == table(speed)) # weights = multiplicities
 >   utils::str(cars.spl, digits = 5, vec.len = 6)
-List of 15
+List of 16
  $ x       : num [1:19] 4 7 8 9 10 11 12 13 14 15 16 17 18 19 20 ...
  $ y       : num [1:19] 1.6578 11.6829 15.0644 18.4823 21.9471 25.4656 29.0505 32.7076 ...
  $ w       : num [1:19] 2 2 1 1 3 2 4 4 4 3 2 3 4 3 5 ...
  $ yin     : num [1:19] 6 13 16 10 26 22.5 21.5 35 ...
+ $ tol     : num 7e-06
  $ data    :List of 3
   ..$ x: num [1:50] 4 4 7 7 8 9 10 10 10 11 11 12 12 12 12 ...
   ..$ y: num [1:50] 2 10 4 22 16 10 18 26 34 17 28 14 20 24 28 ...
@@ -15327,8 +15331,8 @@ List of 15
  $ df      : num 2.6353
  $ spar    : num 0.78013
  $ lambda  : num 0.11122
- $ iparms  : Named int [1:3] 1 0 11
-  ..- attr(*, "names")= chr [1:3] "icrit" "ispar" "iter"
+ $ iparms  : Named int [1:4] 1 0 11 0
+  ..- attr(*, "names")= chr [1:4] "icrit" "ispar" "iter" ""
  $ fit     :List of 5
   ..$ knot : num [1:25] 0 0 0 0 0.14286 0.19048 0.2381 0.28571 ...
   ..$ nk   : int 21
@@ -15367,7 +15371,7 @@ attr(,"class")
 > legend(5,120,c(paste("default [C.V.] => df =",round(cars.spl$df,1)),
 +                "s( * , df = 10)"), col = c("blue","red"), lty = 1:2,
 +        bg = 'bisque')
-> detach()
+> detach() # cars
 > 
 > 
 > ## Residual (Tukey Anscombe) plot:
@@ -15422,9 +15426,21 @@ Penalized Criterion: 0.4973656
 > lines(s2, col = "gray"); lines(predict(s2, xx), col = 2)
 > lines(predict(s02, xx), col = 3); mtext(deparse(s02$call), col = 3)
 > 
+> ## Specifying 'lambda' instead of usual spar :
+> (s2. <- smooth.spline(y18, spar = c(lambda = s2$lambda), tol = s2$tol))
+Call:
+smooth.spline(x = y18, spar = c(lambda = s2$lambda), tol = s2$tol)
+
+Smoothing Parameter  spar= NA  lambda= 9.672776e-05
+Equivalent Degrees of Freedom (Df): 8.494168
+Penalized Criterion: 3.59204
+GCV: 0.7155391
+> 
 > ## Don't show: 
-> stopifnot(all.equal(predict(s02 , xx),
-+ 		    predict(s02., xx), tolerance = 1e-15))
+> nD <- c("spar", "iparms", "call"); nn <- setdiff(names(s2), nD)
+> stopifnot(all.equal(s2[nn], s2.[nn], tol = 7e-7), # seen 6.86e-8
++           all.equal(predict(s02 , xx),
++ 		    predict(s02., xx), tol = 1e-15))
 > ## End(Don't show)
 > 
 > 
